[package]
name = "jtoon"
version = "0.1.0"
edition = "2024"
description = "CLI tool to convert between JSON and TOON (Token-Oriented Object Notation) formats"
license = "MIT"
repository = "https://github.com/Kalowave/jtoon"
homepage = "https://github.com/Kalowave/jtoon"
keywords = ["toon", "json", "cli", "converter"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
